[tool.black]
line-length = 120

[tool.poetry]
name = "pyll-json-errors"
version = "0.1.0"
description = "Convert various objects and exceptions to JSON API errors."
authors = [
    "LeafLink Engineering <engineerin@leaflink.com>",
    "Aaron Markey <aaron.markey@leaflink.com>"
]

[tool.poetry.dependencies]
python = "^3.6"
Flask = { version = "^1.1.2", optional = true }
marshmallow = { version = "^3.7.0", optional = true }
djangorestframework = { version = "^3.0.0", optional = true }
werkzeug = { version = "^1.0.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^19.10b0"
isort = "^5.0.6"
autoflake = "^1.3.1"
coverage = "^5.2"
pdoc3 = "^0.8.4"
pytest-cov = "^2.10.0"
pytest-django = "^3.9.0"

[tool.poetry.extras]
all = ["djangorestframework", "Flask", "marshmallow", "werkzeug"]
flask = ["Flask", "werkzeug"]
marshmallow = ["marshmallow"]
rest_workframe = ["djangorestframework", "werkzeug"]

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
