[tool.black]
line-length = 120

[tool.poetry]
name = "pyll-json-errors"
version = "0.2.4"
description = "Various helpers to transform popular Python library errors into LeafLink flavored JSON API errors."
readme = "README.md"
repository = "https://github.com/LeafLink/pyll-json-errors"

authors = [
    "LeafLink Engineering <engineerin@leaflink.com>",
    "Aaron Markey <aaron.markey@leaflink.com>",
    "Shonte Amato-Grill <shonte.amato-grill@leaflink.com>",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6.2"
Flask = { version = "^1.1.2", optional = true }
marshmallow = { version = "^3.7.0", optional = true }
djangorestframework = { version = "^3.11.2", optional = true }
werkzeug = { version = "^1.0.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^22.3.0"
isort = "^5.0.6"
autoflake = "^1.3.1"
coverage = "^5.2"
pytest-cov = "^2.10.0"
pytest-django = "^3.9.0"
sphinx = "^3.2.1"
sphinx-autobuild = "^2020.9.1"

[tool.poetry.extras]
all = ["djangorestframework", "Flask", "marshmallow", "werkzeug"]
flask = ["Flask", "werkzeug"]
marshmallow = ["marshmallow"]
rest_framework = ["djangorestframework", "werkzeug"]

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
